<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/activity1_text1"
        android:text="@string/app_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity1_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        />

    <Button
        android:id="@+id/activity1_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        />

    <Button
        android:id="@+id/activity1_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_browser" />

    <Button
        android:id="@+id/activity1_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_a_call" />

</LinearLayout>